src/test/deca/context/invalid/created/declVar.deca
// Resultats :
//    Erreur contextuelle
//    Error: void cannot be used as a type for variable declaration

{
    void a;
}
